syntax = "proto3";

package notification;

message Position {
  float x = 1;
  float y = 2;
}

message BaseData {
  int32 hp = 1;
  int32 maxHp = 2;
}

message TowerData {
  int32 towerId = 1;
  float x = 2;
  float y = 3;
}

message MonsterData {
  int32 monsterId = 1;
  int32 monsterNumber = 2;
  int32 level = 3;
}

message InitialGameState {
  int32 baseHp = 1;
  int32 towerCost = 2;
  int32 initialGold = 3;
  int32 monsterSpawnInterval = 4;
}

message GameState {
  int32 gold = 1;
  BaseData base = 2;
  int32 highScore = 3;
  repeated TowerData towers = 4;
  repeated MonsterData monsters = 5;
  int32 monsterLevel = 6;
  int32 score = 7;
  repeated Position monsterPath = 8;
  Position basePosition = 9;
}

message S2CMatchStartNotification {
  InitialGameState initialGameState = 1;
  GameState playerData = 2;
  GameState opponentData = 3;
}

message S2CStateSyncNotification {
  int32 userGold = 1;
  int32 baseHp = 2;
  int32 monsterLevel = 3;
  int32 score = 4;
  repeated TowerData towers = 5;
  repeated MonsterData monsters = 6;
}

message S2CAddEnemyTowerNotification {
  int32 towerId = 1;
  float x = 2;
  float y = 3;
}

message S2CSpawnEnemyMonsterNotification {
  int32 monsterId = 1;
  int32 monsterNumber = 2;
}

message S2CEnemyTowerAttackNotification {
  int32 towerId = 1;
  int32 monsterId = 2;
}

message S2CUpdateBaseHPNotification {
  bool isOpponent = 1; // HP를 업데이트 할 기지가 상대방 기지라면 true
  int32 baseHp = 2;
}

message S2CGameOverNotification {
  bool isWin = 1; // 받는 플레이어가 승리했으면 true
}

message C2SMonsterDeathNotification {
  int32 monsterId = 1;
}

message S2CEnemyMonsterDeathNotification {
  int32 monsterId = 1;
}